--- a/style.css
+++ b/style.css
@@ -32,3 +32,26 @@ body{
 @media (max-width: 375px) {
 }
 
+header{
+  border: 10px solid #111344;
+  border-radius: 25;
+  background-color: hsl(238, 60%, 17%);
+  color: #FEFFEA;
+}
+
+footer{
+  display: flex;
+  justify-content: center;
+  border: 3px solid #111344;
+  background-color: #111344;
+  color:#FEFFEA
+}
+
+a.menu:link{
+  color:black;
+}
+
+a {
+  color: #FEFFEA;
+}
+
