Properly have the survey forms working

--- a/style.css
+++ b/style.css
@@ -172,3 +172,21 @@ text-align: center;
   border-radius: 10px;
   color: #FEFFEA;
 }
+
+input[type="submit" i] {
+  appearance: auto;
+  user-select: none;
+  align-items: flex-start;
+  text-align: center;
+  cursor: default;
+  box-sizing: border-box;
+  background-color: buttonface;
+  color: buttontext;
+  white-space: pre;
+  padding-block: 1px;
+  padding-inline: 6px;
+  border-width: 2px;
+  border-style: outset;
+  border-color: buttonborder;
+  border-image: initial;
+
